# routes/api.php
@@ -19,8 +19,9 @@ use Illuminate\Support\Facades\Route;
 
 Route::controller(AuthController::class)->group(function () {
     Route::post('login', 'login');
-    Route::post('register', 'register');
-    Route::post('verify', 'verify');
+    //Route::post('register', 'register');
+    Route::post('get-otp', 'getOTP');
+    Route::post('verify-otp', 'verifyOTP');
     Route::post('social-login', 'socialLogin');
     Route::post('reset-password/{user_id}', 'resetPassword');
 });
